fixed phone and nav on mobile

--- a/css/catering.css
+++ b/css/catering.css
@@ -17,3 +17,13 @@ header, body {
   margin-top: 3%;
   font-family: Calistoga;
 }
+
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+
+
+}
