--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,36 @@
   font-family: 'ZALESK'; src: url('../font/ZALESK.TTF');
 }
 /* to change the menu nav bar when in mobile version */
-@media (max-width: 600px) {
-  .box2{
-    background-color: red;
-  }
+/* Portrait and Landscape */
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+    nav {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+    }
+
+    .first_three_boxes {
+      display: flex;
+      flex-direction: column;
+      width: 400%;
+    }
+
+    .second_section {
+      flex-direction: column;
+    }
+
+    .box2_1 {
+      float: left;
+      display: inline-block;
+    }
+
+    .box2_1 img {
+      float: left;
+    }
 
 }
 
@@ -67,7 +93,7 @@ TART OF THE BODY */
   display: flex;
   justify-content: space-between;
   justify-content: space-around;
-  width: 80%;
+  /* width: 80%; */
   margin: auto;
   margin-top: 5%;
 }
@@ -122,6 +148,7 @@ h2 {
   margin-left: 5vw;
   font-size: 2em;
 }
+
 /*********************** FOOTER SECTION */
 .foot_div {
   display: flex;
